publish: Fix anchors
generated from commit 64734bc2cb963c6d88fecbce331ffd3c8719d2c1

--- a/index.html
+++ b/index.html
@@ -225,16 +225,6 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#rest-api" class="toc-h2 toc-link" data-title="rest-api">
-                      REST API
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#streaming-api" class="toc-h2 toc-link" data-title="streaming-api">
-                      Streaming API
-                    </a>
-                  </li>
-                  <li>
                     <a href="#sandbox" class="toc-h2 toc-link" data-title="sandbox">
                       Sandbox
                     </a>
@@ -242,7 +232,7 @@
               </ul>
           </li>
           <li>
-            <a href="#rest-api-2" class="toc-h1 toc-link" data-title="rest-api">REST API</a>
+            <a href="#rest-api" class="toc-h1 toc-link" data-title="rest-api">REST API</a>
               <ul class="toc-list-h2">
                   <li>
                     <a href="#introduction-2" class="toc-h2 toc-link" data-title="introduction">
@@ -421,7 +411,7 @@
               </ul>
           </li>
           <li>
-            <a href="#streaming-api-2" class="toc-h1 toc-link" data-title="streaming-api">Streaming API</a>
+            <a href="#streaming-api" class="toc-h1 toc-link" data-title="streaming-api">Streaming API</a>
               <ul class="toc-list-h2">
                   <li>
                     <a href="#introduction-3" class="toc-h2 toc-link" data-title="introduction">
@@ -542,11 +532,7 @@ Switcheo Exchange programatically.</p>
 <p>Before you proceed with the API documentation, be sure to explore Switcheo Exchange at
 <a href="https://switcheo.exchange">https://switcheo.exchange</a>.</p>
 
-<p>Switcheo Exchange provides a REST API and a WebSocket API, described below.</p>
-<h2 id='rest-api'>REST API</h2>
-<p>Switcheo offers both public and private REST APIs. You may find out more information about it <a href="#rest-api">here</a>.</p>
-<h2 id='streaming-api'>Streaming API</h2>
-<p>A Streaming API that can provide real-time trading data is also available. You may find out more information about it <a href="#streaming-api">here</a>.</p>
+<p>Switcheo Exchange provides both a <a href="#rest-api">REST API</a> and a <a href="#streaming-api">Streaming API</a> for real-time trading data.</p>
 <h2 id='sandbox'>Sandbox</h2>
 <p>Use the following TestNet (sandbox) URLs when developing your application:</p>
 
@@ -591,7 +577,7 @@ Switcheo Exchange programatically.</p>
 <td><a href="wss://ws.switcheo.io">wss://ws.switcheo.io</a></td>
 </tr>
 </tbody></table>
-<h1 id='rest-api-2'>REST API</h1><h2 id='introduction-2'>Introduction</h2>
+<h1 id='rest-api'>REST API</h1><h2 id='introduction-2'>Introduction</h2>
 <p>There are two types of REST API endpoints:</p>
 
 <p>Public Exchange APIs - these endpoints provide exchange history, statistics and other data and do not need to be authenticated
@@ -3131,7 +3117,7 @@ will be merged and summed.</p>
 <td>Service Unavailable -- We&#39;re temporarily offline for maintenance. Please try again later.</td>
 </tr>
 </tbody></table>
-<h1 id='streaming-api-2'>Streaming API</h1><h2 id='introduction-3'>Introduction</h2>
+<h1 id='streaming-api'>Streaming API</h1><h2 id='introduction-3'>Introduction</h2>
 <p>Switcheo offers 3 APIs for streaming data:</p>
 
 <ol>
