publish: Fix typo in order endpoint
generated from commit 9472d2d1d3e08ee7a738713500102d745d9079d7

--- a/index.html
+++ b/index.html
@@ -2771,7 +2771,7 @@ This <code>make</code> represents the unfilled amount of the order.</p>
 </span></code></pre>
 <p>Retrieves a specific order</p>
 <h4 id='http-request-19'>HTTP Request</h4>
-<p><code>GET /v2/order/:order_id</code></p>
+<p><code>GET /v2/orders/:order_id</code></p>
 <h4 id='request-parameters-14'>Request Parameters</h4>
 <table><thead>
 <tr>
